<resources>
    <string name="app_name">NotesApp</string>
    <string name="sign_in">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account">Belum mempunyai akun ?</string>
    <string name="sign_up">Daftar</string>
    <string name="already_account">Sudah mempunyai akun?</string>
    <string name="info">Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes">Notes</string>
    <string name="app_version">Version 1.0</string>
    <string name="app_description">Aplikasi untuk menyimpan, mengubah dan menghapus catatan dengan fitur keamanan autentikasi.</string>
    <string name="add_note">Tambah catatan</string>
    <string name="title">Judul</string>
    <string name="category">Kategori</string>
    <string name="note">Catatan</string>
    <string name="add">Tambah</string>
    <string name="detail_note">Detail Catatan</string>
    <string name="save">Simpan</string>
    <string name="edit_note">Ubah Catatan</string>
    <string name="user_name">Dandi Ahmadin</string>
    <string name="user_nim">10119033</string>
    <string name="user_class">IF-1</string>
    <string name="user_email">ahmadin.dandi14@gmail.com</string>
    <string name="logout">Keluar</string>
    <string name="reset_password">Reset Password</string>
    <string name="account">Akun</string>
    <string name="app_name_nim">10119033 NotesApp</string>
</resources>