<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.UserFragment"
    android:padding="16dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/profile"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_nim"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_class"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="2dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/warning"
        android:id="@+id/btn_reset_password"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/danger"
        android:id="@+id/btn_logout"
        android:textColor="@color/white"/>

</LinearLayout>