<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activity.note.DetailNoteActivity"
android:orientation="vertical"
android:padding="16dp">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/detail_note"
    android:textSize="32sp"
    android:textAlignment="center"
    android:layout_marginBottom="30dp"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/title"
    android:textSize="24dp"
    android:id="@+id/title" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/category"
    android:id="@+id/category"
    android:layout_marginBottom="20dp" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/note"
    android:id="@id/note"
    android:textSize="18sp"/>

</LinearLayout>